--- a/notes/TRITON_depletion.ipynb
+++ b/notes/TRITON_depletion.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ORIGEN Depletin options\n",
+    "### ORIGEN depletin options\n",
     "\n",
     "At this point, we have scaled/normalized flux and power for each material based on user information and transport solution of the flux. Now, how ORGIEN will use these information?    \n",
     "\n",
