--- a/notes/TRITON_depletion.ipynb
+++ b/notes/TRITON_depletion.ipynb
@@ -13,7 +13,7 @@
    "source": [
     "\n",
     "- The power/flux provided in the BURNDATA block is mainly used for scaling the transport flux solution to the actual flux/power level of the system\n",
-    "-  Since in some situations power/flux can be known for only selected materials in the system, TRITON has option to enable the user to specify ppwer/flux for those materials by putting negative sign in fort of them in the DEPLETION block\n",
+    "-  Since in some situations power/flux can be known for only selected materials in the system, TRITON has option to enable the user to specify power/flux for those materials by putting negative sign in front of them in the DEPLETION block\n",
     "- TRITON approach in case power if given:\n",
     "    - initialize variable (e.g., power_unnormalized) as zero\n",
     "    - loop over all materials, get thier unnormalized (1 group collpased) flux form the transport, and compute corresponding power based on 1-group cross secions (i.e., fission, capture) and on material amount (i.e., N)[[code](https://code-int.ornl.gov/rnsd/scale/-/blob/master/packages/Origen/Core/dc/Material.cpp?ref_type=heads#L1824)]\n",
@@ -30,7 +30,7 @@
     "       $$\n",
     "        \\text{power\\_unnormalized} = \\sum_{i}^{m}  p{_i}\n",
     "       $$\n",
-    "    - Now compute global scaling factor $f$ as [[code](https://code-int.ornl.gov/rnsd/scale/-/blob/master/packages/Module/TDepl1d/OrigenDepletion.cpp#L983)]\n",
+    "    - now compute global scaling factor $f$ as [[code](https://code-int.ornl.gov/rnsd/scale/-/blob/master/packages/Module/TDepl1d/OrigenDepletion.cpp#L983)]\n",
     "    $$\n",
     "       f = \\frac{\\text{power\\_input}}{\\text{power\\text{\\_unnormalized}}}\n",
     "    $$\n",
@@ -48,7 +48,7 @@
     "    \\phi_\\text{total} = \\sum_{i=1}^{m} \\phi_{{i}_\\text{{unnormalized}}}\n",
     "    $$\n",
     "\n",
-    "    - the scaling factor f is compute as \n",
+    "    - the scaling factor f is computed as \n",
     "        $$\n",
     "        f = \\frac{\\text{flux\\_input}}{\\phi_\\text{total}}\n",
     "        $$\n",
