--- a/notes/TRITON_depletion.ipynb
+++ b/notes/TRITON_depletion.ipynb
@@ -37,7 +37,7 @@
     "\n",
     "    - use this scaling factor to scale all materials fluxes and powers (e.g., $p_i$, $\\phi_{i_\\text{unnormalized}}$). [[code](https://code-int.ornl.gov/rnsd/scale/-/blob/master/packages/Module/TDepl1d/OrigenDepletion.cpp#L1001)]\n",
     "    \n",
-    "    - note that if there are not specific materials used for normlization, we use **powers** of all materials to compute the scaling factor\n",
+    "    - note that if there are not specific materials used for as basis for normlization, we use **powers** of all materials to compute the scaling factor\n",
     "\n",
     "Rabab's changes in # 1839:\n",
     "\n",
